samples/_failures_safe/1761225309_2b7aa2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41451db2.c: In function ‘main’:
./samples/SAFE/__tmp_41451db2.c:177:30: error: expected ‘)’ at end of input
  177 |     size_t len = strlen(input
      |                        ~     ^
      |                              )
./samples/SAFE/__tmp_41451db2.c:177:5: error: expected declaration or statement at end of input
  177 |     size_t len = strlen(input
      |     ^~~~~~
